--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,11 @@
 @plugin "./hero.ts";
 @source "../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}";
 @custom-variant dark (&:is(.dark *));
+
+@media (max-width: 639px) {
+  #nprogress .bar,
+  #nprogress .peg,
+  #nprogress .spinner {
+    display: none !important;
+  }
+}
